[package]
name = "op-maw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.90.0", features = [
  "derive",
  "ws",
  "runtime",
  "admission",
] }
k8s-openapi = { version = "0.21.1", features = ["v1_26", "schemars"] }
axum = "0.7"
axum-server = { version = "0.6", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json-patch = "1"
